conformance/tests/gateway-invalid-parameters-ref.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-invalid-parameters-ref
  namespace: gateway-conformance-infra
  annotations:
    gateway-api/skip-this-for-readiness: "true"
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
  infrastructure:
    parametersRef:
      group: invalid.io
      kind: InvalidParameters
      name: invalid
